--- a/app/src/main/res/layout/layout_pass.xml
+++ b/app/src/main/res/layout/layout_pass.xml
@@ -5,6 +5,7 @@
 
     <Button
         android:id="@+id/but_add"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add account" />
