--- a/app/src/main/res/layout/layout_add_pass.xml
+++ b/app/src/main/res/layout/layout_add_pass.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/edit_site"
@@ -36,6 +38,7 @@
 
     <Button
         android:id="@+id/but_add"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add" />
