--- a/app/src/main/res/layout/layout_list.xml
+++ b/app/src/main/res/layout/layout_list.xml
@@ -7,8 +7,9 @@
         android:id="@+id/txt_site"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="65px"
-        android:paddingLeft="30px"/>
+        android:paddingLeft="30px"
+        android:textColor="#4c4c4c"
+        android:textSize="65px" />
 
     <TextView
         android:id="@+id/txt_name"
