--- a/app/src/main/res/layout/layout_setting.xml
+++ b/app/src/main/res/layout/layout_setting.xml
@@ -5,18 +5,21 @@
 
     <Button
         android:id="@+id/but_push"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Push to Cloud" />
 
     <Button
         android:id="@+id/but_pull"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pull from Cloud" />
 
     <Button
         android:id="@+id/but_logout"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Logout" />
