--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_note_add_black_24dp"
-        android:title="Add Password" />
+        android:title="Add" />
 
     <item
         android:id="@+id/navigation_notifications"
