--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,8 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in_short"
-                android:textStyle="bold" />
+                android:text="@string/action_sign_in_short" />
 
             <Button
                 android:id="@+id/but_test_login"
@@ -78,8 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="SIGN UP"
-                android:textStyle="bold" />
+                android:text="SIGN UP" />
 
         </LinearLayout>
     </ScrollView>
