--- a/app/src/main/res/layout/layout_add_pass.xml
+++ b/app/src/main/res/layout/layout_add_pass.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="User Name"
+        android:hint="Username"
         android:inputType="text" />
 
     <EditText
